infra/webapp-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: [SERVICE_NAME]  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: [SERVICE_NAME]
  template:
    metadata:
      labels:
        app: [SERVICE_NAME]
    spec:
      containers:
      - name: [SERVICE_NAME]
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: [SERVICE_NAME]  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: [SERVICE_NAME]
